# query-builder

./: README.md  next.config.mjs  package-lock.json  package.json
.github/workflows/: ci.build-UI.yml  ci.run-tests.yml  ci.yml  deploy.UI.yml  deploy.Workers.yml  deploy.WorkersTest.yml  publish.yml
app/: columns.tsx  data-table.tsx  layout.tsx  page.tsx
app/upload/: page.tsx
components/: AccordionFormik.tsx  CSVUploader.tsx  Mandatory.tsx  QueryBuilder.tsx  TableView.tsx  Tooltips.tsx
components/data-table/: columns.tsx
lib/: GlobalStateContext.tsx  data.ts  parseRawTableMetadata.tsx  utils.ts
lib/db/: schema.ts
migrations/: 0000_outgoing_killer_shrike.sql  0001_swift_sasquatch.sql
migrations/meta/: 0000_snapshot.json  _journal.json
types/: table.ts
ui-app/: .eslintrc.json  next.config.mjs  package-lock.json  package.json
ui-app/app/: globals.css  layout.tsx  page.tsx
ui-app/components/: AccordionFormik.tsx  AddQueryForm.tsx  CSVUploader.tsx  DatePicker.tsx  FormikAccordion.tsx  FormikInput.tsx  FormikSelect.tsx  GenerateQuery.tsx  GenerateQueryForm.tsx  HowItWork.tsx  QueryBuilder.tsx  TableView.tsx  demo.tsx
ui-app/lib/: GlobalStateContext.tsx  data.ts  operators.tsx  parseRawTableMetadata.tsx  style.ts  utils.ts
ui-app/types/: function.ts  (+2 more)
workers/: .coveragerc  .pre-commit-config.yaml  core.py  function.json  function_app.py  pyproject.toml  pytest.ini  requirements.txt  test_utils.py  utils.py
workers-test/: function_app.py  hello.py  pyproject.toml  requirements.txt
workers/libs/: core.py  lib.py
workers/tests/: test_utils.py
(+22 files in other folders)
